# MemeGenerator

./: CMakeLists.txt  README.md
src/: memeify.cpp  memer.cpp  memer.h
